--- a/web/src/main/resources/templates/member/signin.html
+++ b/web/src/main/resources/templates/member/signin.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v4.0.1">
-    <title>Signin Template · Bootstrap</title>
+    <title>Signin</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -35,9 +35,9 @@
     <img class="mb-4" src="/img/icon.png" alt="" width="100" height="100">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" th:field="*{mb_email}" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <input type="email" th:field="*{email}" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" th:field="*{mb_pw}" id="inputPassword" class="form-control" placeholder="Password" required>
+    <input type="password" th:field="*{password}" id="inputPassword" class="form-control" placeholder="Password" required>
     <div class="checkbox mb-3">
         <label>
             <input type="checkbox" value="remember-me"> Remember me
