--- a/web/src/main/resources/templates/member/signup.html
+++ b/web/src/main/resources/templates/member/signup.html
@@ -1,66 +1,56 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header"/>
-<style>
-    .fieldError {
-        border-color: #bd2130;
-    }
-</style>
-<!-- 나중에 회원가입시 EMAIL UNIQUE 를 위한 style -->
-<body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v4.0.1">
+    <title>Signup</title>
 
-<div class="container">
-    <div th:replace="fragments/bodyheader :: bodyheader"/>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/css/bootstrap.min.css" integrity="sha384ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <form role="form" action="/member/signup" th:object="${memberForm}" method="post">
-        <div class="form-group">
-            <label th:for="email">아이디</label>
-            <input type="email" th:field="*{mb_email}" class="form-control" placeholder="hong-gil-dong@naver.com">
-        </div>
+    <style>
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+        }
 
-        <div class="form-group">
-            <label th:for="password">비밀번호</label>
-            <input type="password" th:field="*{mb_pw}" class="form-control" placeholder="*****">
-        </div>
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="/css/signup.css" rel="stylesheet">
+</head>
+<body class="text-center">
+<form class="form-signup" role="form" action="/member/signup" th:object="${memberForm}" method="post">
+    <img class="mb-4" src="/img/icon.png" alt="" width="100" height="100">
+    <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
 
-        <div class="form-group">
-            <label th:for="name">닉네임</label>
-            <input type="text" th:field="*{mb_name}" class="form-control" placeholder="닉네임을 입력하세요">
-        </div>
-        <br>
+    <label for="inputEmail" class="sr-only">Email address</label>
+    <input type="email" th:field="*{email}" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
 
-        <div class="form-group">
-            <label th:for="city">거주시</label>
-            <select name="city" id="city" class="form-control">
-                <option value="">거주시 선택</option>
-                <option th:each="city : ${citys}" th:value="${city}" th:text="${city}"/>
-            </select>
-        </div>
+    <label for="inputPassword" class="sr-only">Password</label>
+    <input type="password" th:field="*{password}" id="inputPassword" class="form-control" placeholder="Password" required>
 
-        <div class="form-group">
-            <label th:for="gu">거주구</label>
-            <select name="gu" id="gu" class="form-control">
-                <option value="">거주구 선택</option>
-                <option th:each="gu : ${gus}" th:value="${gu}" th:text="${gu}"/>
-            </select>
-        </div>
+    <label for="inputName" class="sr-only">Name</label>
+    <input type="text" th:field="*{name}" id="inputName" class="form-control" placeholder="Name" required>
 
-        <div class="form-group">
-            <label th:for="dong">거주동</label>
-            <select name="dong" id="dong" class="form-control">
-                <option value="">거주동 선택</option>
-                <option th:each="dong : ${dongs}" th:value="${dong}" th:text="${dong}"/>
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary">회원가입 하기</button>
-    </form>
-    <br/>
-    <div th:replace="fragments/footer :: footer"/>
-</div> <!-- /container -->
-<script>
-    $("#city option:checked").text()
-    $("#gu option:checked").text()
-    $("#dong option:checked").text()
-</script>
+    <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" value="remember-me"> Remember me
+        </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
+    <p class="mt-5 mb-3 text-muted">&copy; KPMK12</p>
+</form>
 </body>
 </html>
